--- a/src/app/chatbot/chatbot.component.html
+++ b/src/app/chatbot/chatbot.component.html
@@ -1,5 +1,8 @@
-<div class="container mt-5">
-  <div class="row">
-      <iframe src='https://webchat.botframework.com/embed/prodesp-mvpchatbot?s=1pgen8KYPEg.t8Znndisa4z7VFWekRx9pCtKFPSdoIR6KYEmMyVnYd4'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+
+    <div class="flex">
+        <div class="main-container mt-5">
+            <h1>MVP Chatbot</h1>
+        </div>
+      <div class="webchat-container" #botWindow></div>
   </div>
-</div>
+
