--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
         <div>
             <img src="assets/img/logo-prodesp-branco.png" alt="">          
@@ -9,7 +9,13 @@
         
       <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/chatbot']">Chatbot</a>
+          <a class="nav-link" [routerLink]="['/home']">Home</a>          
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/chatbot']">Chatbot</a>            
+        </li>
+        <li class="nav-item">            
+            <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
         </li>
       </ul>
     
