--- a/src/app/chatbot/chatbot.component.html
+++ b/src/app/chatbot/chatbot.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="footerBC">
-        <input type="text" id="chatInput" style="width: 80%;" placeholder="Digite uma mensagem..." #txtMessage/>
+        <input type="text" id="chatInput" style="width: 80%;" placeholder="Digite uma mensagem..." #txtMessage (keyup.enter)="novoEvento()"/>
         <input type="submit" id="btnSendMessage" value='' name='btnSendMessage' (click)="novoEvento()" class="send-btn"/>
       </div>
     </div>
