--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -29,14 +29,15 @@
         <div class="dropdown-menu mt-3" *dropdownMenu>
           <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Sair</a>
         </div>
-      </div>
-    
+      </div>      
+
       <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-        <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required [(ngModel)]="model.username">
-        <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password">
-        <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Entrar</button>
+        <div class="mt-2" style="padding-bottom: 10px">
+            <input class="form-control mr-sm-2 " type="text" name="username" placeholder="Username" required [(ngModel)]="model.username">
+            <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required [(ngModel)]="model.password">
+            <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Entrar</button>
+        </div>
       </form>
-      
   </div>
   
 </nav>
